--- a/app/src/main/res/layout/activity_event_view.xml
+++ b/app/src/main/res/layout/activity_event_view.xml
@@ -19,15 +19,15 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="@dimen/eventNameTextViewTextSize"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:textStyle="bold"/>
 
 
     <ScrollView
         android:id="@+id/eventInformationScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
-        style="@style/eventInformationScrollbarStyle">
+        android:layout_weight="5">
 
         <LinearLayout
             android:id="@+id/eventInformationLinearLayout"
@@ -70,39 +70,6 @@
                 android:layout_marginBottom="@dimen/linearLayoutTextViewMargin"
                 android:drawableStart="@drawable/location_icon"
                 android:drawablePadding="@dimen/textViewIconPadding"/>
-
-            <TextView
-                android:id="@+id/eventPriceTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/loremIpsumDummyStringSmall"
-                android:textSize="@dimen/scrollViewTextSize"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="@dimen/linearLayoutTextViewMargin"
-                android:drawableStart="@drawable/price_icon"
-                android:drawablePadding="@dimen/textViewIconPadding"/>
-
-            <TextView
-                android:id="@+id/eventOwnerNameTextField"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/loremIpsumDummyStringSmall"
-                android:textSize="@dimen/scrollViewTextSize"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="@dimen/linearLayoutTextViewMargin"
-                android:drawableStart="@drawable/eventowner_icon"
-                android:drawablePadding="@dimen/textViewIconPadding"/>
-
-            <TextView
-                android:id="@+id/eventOwnerEmailTextField"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/loremIpsumDummyStringSmall"
-                android:textSize="@dimen/scrollViewTextSize"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="@dimen/linearLayoutTextViewMargin"
-                android:drawableStart="@drawable/email_icon"
-                android:drawablePadding="@dimen/textViewIconPadding" />
 
             <TextView
                 android:id="@+id/eventDescriptionTextView"
